fix: minor build issues